--- a/index.html
+++ b/index.html
@@ -37,22 +37,21 @@
 					
 
 					<ul id="navigation">
-						<a href="#" style="font-size: xx-large;">Contact</a>
-						&nbsp;&nbsp;&nbsp;&nbsp;
+
 						<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
-							<i class="fas fa-at fa-2x"></i>
+							<i class="fas fa-at fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="https://api.whatsapp.com/send?phone=+923174585625 " target="blank">
-							<i class="fab fa-whatsapp fa-2x"></i>
+							<i class="fab fa-whatsapp fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="https://github.com/Taimoor-hassan" target="blank">
-							<i class="fab fa-github fa-2x"></i>
+							<i class="fab fa-github fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;
 						<a href="https://www.linkedin.com/in/taimoor-hassan-5457301a7/" target="blank">
-							<i class="fab fa-linkedin fa-2x"></i>
+							<i class="fab fa-linkedin fa-1.9x"></i>
 						</a>
                         &nbsp;
 
@@ -144,12 +143,8 @@
 					<div id="skills">
 					<ul>
 						<li>🔴CCNA(R/S) (Cisco Certified Network Associate)</li>
-						<p><ul>
-
-							<li>OSI model/Network Protocols</li>
-							<li>Routers/Switches</li>
-							
-						</ul></p>
+						<br>
+						<li>🔴RHCSA (Redhat Certified System Aministrator)</li>
 
 					</ul>
 				    </div>
