--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="default.css">
 	<link id="theme-style" rel="stylesheet" type="text/css" href="">
+	<link rel="shortcut icon" type="./images/PNG" href="./images/icon.png" >
 </head>
 <body>
 
