--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/Dennis.jpg">
+					<img id="profile_pic" src="images/Me.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
@@ -136,14 +136,14 @@
 					<span ><a target="_blank" class="ch" style="font-weight: 500;" href="https://www.instagram.com/taimoor_hassan.98/?hl=en">Instagram </a></span> &nbsp;
 					<a target="_blank" style="font-weight: 500;" href="https://github.com/Taimoor-hassan">GitHub </a> &nbsp;
 					</p>
-					<br><br>
+					<br>
 					<hr>
 
 					<h3>Certifications</h3>
-					<p>They were really helpfull in understanding the structure of network, the way network works and the protocols involved in networking.</p>
+					<p>Setting up and mantaining a small scale network is what i came out with, through them.</p>
 					<div id="skills">
 					<ul>
-						<li>🔴CCNA(R/S) (Cisco Certified Network Associate)</li>
+						<li>🔴CCNA(R/S)(Cisco Certified Network Associate)</li>
 						<br>
 						<li>🔴RHCSA (Redhat Certified System Aministrator)</li>
 
