--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+	<a name="top"></a>
 
 	<section class="s1">
 		<div class="main-container">
@@ -288,8 +289,11 @@
 				</div>
 
 			</div>
+
 		</div>
+
 	</section>
+
 	<!--
 	<section class="s2">
 		<div class="main-container">
@@ -321,3 +325,32 @@
 </body>
 
 </html>
+<footer>
+	<div style="bottom: 0; display: flex; justify-content: space-around; padding: 1rem; background-color: #192734;">
+		<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
+			<i class="fas fa-at fa-1.9x" style="color: white;"></i>
+		</a>
+
+		<a href="https://api.whatsapp.com/send?phone=+923174585625 " target="blank">
+			<i class="fab fa-whatsapp fa-1.9x" style="color: white;"></i>
+		</a>
+
+		<a href="https://github.com/Taimoor-hassan" target="blank">
+			<i class="fab fa-github fa-1.9x" style="color: white;"></i>
+		</a>
+
+		<a href="https://www.linkedin.com/in/taimoor-hassan-5457301a7/" target="blank">
+			<i class="fab fa-linkedin fa-1.9x" style="color: white;"></i>
+		</a>
+
+		<a href="https://www.freelancer.pk/u/Taimoorhassan98" target="blank">
+			<i class="fas fa-laptop-house fa-1.9x" style="color: white;"></i>
+		</a>
+
+		<a href="#top">
+			<i class="fas fa-chevron-up fa-1.9x" style="color: white;"></i>
+		</a>
+
+	</div>
+
+</footer>
