--- a/index.html
+++ b/index.html
@@ -326,29 +326,29 @@
 
 </html>
 <footer>
-	<div style="bottom: 0; display: flex; justify-content: space-around; padding: 1rem; background-color: #192734;">
+	<div style="bottom: 0; display: flex; justify-content: space-around; padding: 1rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
 		<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
-			<i class="fas fa-at fa-1.9x" style="color: white;"></i>
+			<i class="fas fa-at fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="https://api.whatsapp.com/send?phone=+923174585625 " target="blank">
-			<i class="fab fa-whatsapp fa-1.9x" style="color: white;"></i>
+			<i class="fab fa-whatsapp fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="https://github.com/Taimoor-hassan" target="blank">
-			<i class="fab fa-github fa-1.9x" style="color: white;"></i>
+			<i class="fab fa-github fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="https://www.linkedin.com/in/taimoor-hassan-5457301a7/" target="blank">
-			<i class="fab fa-linkedin fa-1.9x" style="color: white;"></i>
+			<i class="fab fa-linkedin fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="https://www.freelancer.pk/u/Taimoorhassan98" target="blank">
-			<i class="fas fa-laptop-house fa-1.9x" style="color: white;"></i>
+			<i class="fas fa-laptop-house fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="#top">
-			<i class="fas fa-chevron-up fa-1.9x" style="color: white;"></i>
+			<i class="fas fa-chevron-up fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 	</div>
