--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
 
 </html>
 <footer>
-	<div style="bottom: 0; display: flex; justify-content: space-around; padding: 1rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
+	<div style="bottom: 0; display: flex; justify-content: space-around; padding: .9rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
+		
 		<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
 			<i class="fas fa-at fa-1.9x" style="color: #192734;"></i>
 		</a>
@@ -348,7 +349,7 @@
 		</a>
 
 		<a href="#top">
-			<i class="fas fa-chevron-up fa-1.9x" style="color: #192734;"></i>
+			<i class="fas fa-chevron-up fa-1.9x" style="color: #192734; padding-right: 25px;"></i>
 		</a>
 
 	</div>
