--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 					<ul id="navigation">
 
-						<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
+						<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
 							<i class="fas fa-at fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -328,7 +328,7 @@
 <footer>
 	<div style="bottom: 0; display: flex; justify-content: space-around; padding: .9rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
 		
-		<a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
+		<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
 			<i class="fas fa-at fa-1.9x" style="color: #192734;"></i>
 		</a>
 
