--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 					<ul id="navigation">
 
-						<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
+						<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" target="blank">
 							<i class="fas fa-at fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -300,17 +300,17 @@
 			<a href=""></a>
 			<h3 style="text-align: center;">Get In Touch</h3>
 
-			<form id="contact-form" action="mailto:king.taimoor98.th@gmail.com" method="post" enctype="text/plain">
+			<form id="contact-form" action="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" method="post" enctype="text/plain" target="blank">
 				<a name="contact"></a>
 
 				<label>Name</label>
-				<input class="input-field" type="text" name="name">
+				<input class="input-field" type="text" name="name"> 
 
-				<label>Subject</label>
-				<input class="input-field" type="text" name="subject">
+				<!-- <label>Subject</label>
+				<input class="input-field" type="text" name="subject"><br> -->
 
 				<label>Email</label>
-				<input class="input-field" type="text" name="email">
+				<input class="input-field" type="text" name="email"><br>
 
 				<label>Message</label>
 				<textarea class="input-field" name="message"></textarea>
@@ -328,7 +328,7 @@
 <footer>
 	<div style="bottom: 0; display: flex; justify-content: space-around; padding: .9rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
 		
-		<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited Your Site" target="blank">
+		<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" target="blank">
 			<i class="fas fa-at fa-1.9x" style="color: #192734;"></i>
 		</a>
 
