--- a/index.html
+++ b/index.html
@@ -297,10 +297,9 @@
 	
 	<section class="s2">
 		<div class="main-container">
-			<a href=""></a>
 			<h3 style="text-align: center;">Get In Touch</h3>
 
-			<form id="contact-form" action="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" method="post" enctype="text/plain" target="blank">
+			<form id="contact-form" action="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" method="post" enctype="text/plain" >
 				<a name="contact"></a>
 
 				<label>Name</label>
@@ -316,6 +315,7 @@
 				<textarea class="input-field" name="message"></textarea>
 
 				<input id="submit-btn" type="submit" value="Send">
+				<input id="submit-btn" type="reset" value="Reset">
 			</form>
 		</div>
 	</section> 
