--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
 	
 	<section class="s2">
-		<div class="main-container">
+		<div class="main-container" id="content-desktop">
 			<h3 style="text-align: center;">Get In Touch</h3>
 
 			<form id="contact-form" action="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" method="post" enctype="text/plain" >
