--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<a name="top"></a>
 
-	<section class="s1">
+	<section class="s1" style="padding-bottom: 2rem;">
 		<div class="main-container">
 			<div class="greeting-wrapper">
 				<h2>Hi, I'm Taimoor Hassan</h2>
@@ -85,8 +85,9 @@
 				<div class="right-column">
 
 					<div id="preview-shadow">
-						<div id="preview">
+						<div id="preview" style="padding:.6rem">
 							<div id="corner-tl" class="corner"></div>
+							<div id="corner-tr" class="corner"></div>
 							<h3>What I Do</h3>
 							<p>I am a CS student and have some hands on experience in web-development and
 								management project.My updated side projects are below.</p>
@@ -98,7 +99,7 @@
 			</div>
 		</div>
 	</section>
-	<br>
+	<!-- <br> -->
 
 	<section class="s2">
 		<div class="main-container">
@@ -171,7 +172,7 @@
 		<br>
 	</section>
 
-	<br>
+	<!-- <br> -->
 
 	<section class="s1">
 		<div class="main-container">
@@ -292,7 +293,7 @@
 
 	</section>
 
-	<br>
+	<!-- <br> -->
 
 	
 	<section class="s2">
@@ -348,7 +349,7 @@
 			<i class="fas fa-laptop-house fa-1.9x" style="color: #192734;"></i>
 		</a>
 
-		<a href="#top">
+		<a href="#top" style="border: none; outline:0;">
 			<i class="fas fa-chevron-up fa-1.9x" style="color: #192734; padding-right: 25px;"></i>
 		</a>
 
