--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 </body>
 
 </html>
-<footer>
+<footer id="content-mobile">
 	<div style="bottom: 0; display: flex; justify-content: space-around; padding: .9rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
 		
 		<a href="mailto:king.taimoor98.th@gmail.com?subject=Hi Taimoor I Visited You Online And My Query/Message Is" target="blank">
