--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	
+	<!-- For pwa -->
+	
 	<link rel="manifest" href="manifest.json"></link>
 	<script src="manup.js"></script>
+	<script src="pwabuilder-sw.js"></script>
+	<script src="pwabuilder-sw-register.js"></script>
+	
+	<!-- For pwa -->
+	
 
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
