--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<a href="https://twitter.com/Taimoor98_" target="blank">
 							<i class="fab fa-twitter fa-1.9x"></i>
 						</a>
-						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;
 						<a href="https://github.com/Taimoor-hassan" target="blank">
 							<i class="fab fa-github fa-1.9x"></i>
 						</a>
