--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 </body>
 
 </html>
-<footer id="content-mobile" style="box-shadow: #192734;">
+<footer id="content-mobile" style="box-shadow: 0 -5px 5px -5px #333;">
 	<div
 		style="bottom: 0; display: flex; justify-content: space-around; padding: .9rem; background-color: white; position: fixed; bottom: 0; width: 100%;">
 
