--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 	<section class="s1" style="padding-bottom: 2rem;">
 		<div class="main-container">
 			<div class="greeting-wrapper">
-				<h2>Hi, I'm Taimoor Hassan</h2>
+				<!-- <h2>Hi, I'm Taimoor Hassan</h2> -->
+				<!-- <h2>
+					<div class="typewrite" data-period="2000"
+						data-type='[ "Hi, Its Taimoor Hassan.", "Web Developer.", "I Love to Develop And Deploy." ]'>
+						<span class="wrap"></span>
+					</div>
+				</h2> -->
+				<h2>
+					<div id="text"></div>
+					<div id="cursor"></div>
+				</h2>
 			</div>
 
 
@@ -47,11 +57,11 @@
 							target="blank">
 							<i class="fas fa-at fa-1.9x"></i>
 						</a>
-						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;
 						<a href="https://api.whatsapp.com/send?phone=+923174585625 " target="blank">
 							<i class="fab fa-whatsapp fa-1.9x"></i>
 						</a>
-						&nbsp;&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;
 						<a href="https://twitter.com/Taimoor98_" target="blank">
 							<i class="fab fa-twitter fa-1.9x"></i>
 						</a>
@@ -64,7 +74,7 @@
 							<i class="fab fa-linkedin fa-1.9x"></i>
 						</a>
 						&nbsp;&nbsp;&nbsp;
-						<a href="https://www.freelancer.pk/u/Taimoorhassan98" target="blank">
+						<a href="https://www.fiverr.com/timoorhassan" target="blank">
 							<i class="fas fa-laptop-house fa-1.9x"></i>
 						</a>
 						&nbsp;
@@ -347,6 +357,8 @@
 
 
 	<script type="text/javascript" src="script.js"></script>
+	<script src="retype.js"></script>
+	<script src="typo.js"></script>
 </body>
 
 </html>
@@ -375,12 +387,13 @@
 			<i class="fab fa-twitter fa-1.9x" style="color: #192734;"></i>
 		</a>
 
-		<a href="https://www.freelancer.pk/u/Taimoorhassan98" target="blank">
+		<a href="https://www.fiverr.com/timoorhassan" target="blank">
 			<i class="fas fa-laptop-house fa-1.9x" style="color: #192734;"></i>
 		</a>
 
 		<a href="#top" style="border: none; outline:0;">
-			<i class="fas fa-chevron-up fa-1.9x" style=" border: none; outline:0; color: #192734; padding-right: 25px;"></i>
+			<i class="fas fa-chevron-up fa-1.9x"
+				style=" border: none; outline:0; color: #192734; padding-right: 25px;"></i>
 		</a>
 
 	</div>
