--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<title>Taimoor_Hassan</title>
 
-
+	<meta name="google-site-verification" content="guh_s98E3UPkX7UIJweVtU2PX3cGuI2mEiRCeKHUh0w" />
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
